# space-python-client

./: .env.example  .gitignore  pyproject.toml  pytest.ini  requirements.txt  server.py
app/: __init__.py
app/models/: __init__.py  feature_eval_result.py  features.py  service_context.py  service_context_enums.py
app/routes/: __init__.py  config.py  contract_module.py  feature_eval_module.py  feature_module.py  service_context_module.py
app/utils/: __init__.py  conect.py  parser.py
app_SpacePyCl/: __init__.py
app_SpacePyCl/models/: __init__.py  contracts.py  service_context.py
app_SpacePyCl/routes/: contract_module.py  feature_eval_module.py  service_context_module.py
app_SpacePyCl/utils/: __init__.py  conect.py
tests/: conftest.py  test_connection.py  test_contract_module.py  test_feature_eval.py  test_minimal.py  test_service_context.py  test_setup.py
tests/resources/pricings/: TomatoMeter.yml  TomatoMeter_copy.yml
tests/utils/: setup.py
